# talkbridge

./: .env  .env.example  .env.talkbridge  .gitignore  CONDA_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  LEEME.txt  Makefile  README.md  WARP.md  audio_check.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  launch_desktop.ps1  launch_desktop.sh  nginx-talkbridge.conf  pyproject.toml  pytest.ini  quick_test.py  requirements-desktop.txt  requirements-docker.txt  requirements-minimal.txt  requirements.txt  run_desktop.bat  run_talkbridge.bat  run_talkbridge.ps1  setup_desktop.py  simple_test.py  talkbridge.service  test_audio_simple.py
config/: INSTALLATION_ANALYSIS.md  README.md  activate_desktop.ps1  activate_desktop.sh  cleanup_conda_env.py  config.yaml  environment-desktop-simple.yaml  environment-desktop-simple.yml  environment-desktop.yaml  environment-desktop.yml  environment-web.yaml  error_diagnostic.py  post_install_fix.py  run_desktop_conda.bat  run_desktop_conda.sh  setup_conda_desktop.py  setup_conda_web.py
data/: app_state.json  desktop_settings.json  users.db
doc/: architecture.md  modules_overview.md  project_overview.md  setup_instructions.md
scripts/: cleanup_logging.py  migrate_users.py
src/: __init__.py  animation_demo.py  app.py  audio_demo.py  config.py  errors.py  logging_config.py  ollama_demo.py  translation_demo.py
src/animation/: README.md  __init__.py  audio_visualizer.py  camera_manager.py  face_sync.py  interactive_animations.py  loading_animation.py
src/audio/: __init__.py  capture.py  effects.py  generator.py  pipeline_manager.py  player.py  ports.py  synthesizer.py
src/audio_capture/: audio_capture.py
src/auth/: README.md  __init__.py  auth_manager.py  user_store.py
src/demo/: __init__.py  animation_demo.py  animation_example.py  audio_demo.py  demo_api.py  demo_config.py  demo_runner.py  demo_ui.py  face_sync_demo.py  ollama_demo.py  run_demo.py  translation_demo.py  tts_demo.py  tts_example.py
src/desktop/: README.md  __init__.py  logging_config.py  main.py  notifier_adapter.py  test_ui.py
src/json/: README.md  generate_secure_users.py  passwords_dev_only.txt  users.json
src/ollama/: README.md  __init__.py  conversation_manager.py  model_manager.py  ollama_client.py  prompt_engineer.py  streaming_client.py
src/screen_capture/: screen_capture.py
src/stt/: README.md  __init__.py  audio_utils.py  config.py  interface.py  whisper_engine.py
src/talkbridge/: __init__.py  app.py  config.py  errors.py  logging_config.py
src/translation/: README.md  __init__.py  offline_translator.py  translator.py
src/tts/: README.md  (+4 more)
test/: __init__.py  test_animations.py  test_audio_pipeline.py  test_capture.py  test_demo.py  test_error_handling.py  test_logger.py  test_storage_manager.py  test_stt_module.py  test_timeout_fix.py  test_transcribe.py  test_translate.py  test_tts.py  test_voice_clone.py
tools/: autofix_parens.py  check_syntax.py  ci_guard.py  ci_guard_paths.py  fix_import_hacks.py  setup_secure_passwords.py
(+211 files in other folders)
